--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <h1>Assignment</h1>
+    <div class="intro">
+        <h3>Name : Shahrukh Nizami</h3>
+        <h3>Student ID : WMA-231613</h3>
+        <h3>Assignment # 5</h3>
+        <h3>Teacher Name: Sir Bilal Attari</h3>
+        <br>
+
+    </div>
    <div class="main">
     <br>
     <div class="menu"><img src="images/bars-solid.svg"><strong>Menu</strong></div>
@@ -27,6 +36,22 @@
     <div class="menu"><img src="images/gear-solid.svg"><span>Settings</span></div>
     
     </div>
+    <div class="main">
+        <br>
+        <div class="menu"><img src="images/bars-solid.svg"><strong>Menu</strong></div>
+        <br>
+        <div class="menu"><img src="images/house-solid.svg"><span>Dashboard</span></div>    
+        <div class="menu"><img src="images/qrcode-solid.svg"><span>Projects</span></div>
+        <div class="menu"><img src="images/bell-regular.svg"><span>Notification</span></div>  
+        <div class="menu"><img src="images/chart-pie-solid.svg"><span>Analytics</span></div>
+        <div class="menu"><img src="images/heart-regular.svg"><span>Likes</span></div>
+        <div class="menu"><img src="images/wallet-solid.svg"><span>Wallets</span></div>
+        <div class="menu"><img src="images/message-solid.svg"><span>Messages</span></div>
+        <br>
+        <div class="menu"><img src="images/right-from-bracket-solid.svg"><span>Logout</span></div>
+        <div class="menu"><img src="images/gear-solid.svg"><span>Settings</span></div>
+        
+        </div>
 
 </body>
 </html>
