Some More Changes

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Assignment</h1>
+    <h1>Assignment # 5</h1>
     <br>
     <hr>
     <br>
     <div class="intro">
-        <h3>Name : Shahrukh Nizami</h3>
-        <h3>Student ID : WMA-231613</h3>
-        <h3>Assignment # 5</h3>
-        <h3>Teacher Name: Sir Bilal Attari</h3>
+        
+        <h3>Name : <span>Shahrukh Nizami</span></h3><br>
+        <h3>Student ID : <span>WMA-231613</span></h3><br>
+        <h3>Assignment : <span>Side Bar</span></h3><br>
+        <h3>Teacher : <span>Sir Bilal Attari</span></h3>
         <br>
 
     </div>
