--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <h3>Name : <span>Shahrukh Nizami</span></h3><br>
         <h3>Student ID : <span>WMA-231613</span></h3><br>
-        <h3>Assignment : <span>Side Bar</span></h3><br>
+        <h3>Assignment : <span>Side Bar Menu</span></h3><br>
         <h3>Teacher : <span>Sir Bilal Attari</span></h3>
         <br>
 
